Создано с помощью Colaboratory

--- a/hw1_Васильева.ipynb
+++ b/hw1_Васильева.ipynb
@@ -233,7 +233,7 @@
       "source": [
         "#https://github.com/zalandoresearch/fashion-mnist/blob/master/utils/mnist_reader.py\n",
         "\n",
-        "def load_mnist(path: str, kind: str = 'train'): #-> Tuple[np.ndarray, np.ndarray]:\n",
+        "def load_mnist(path: str, kind: str = 'train'):\n",
         "    import os\n",
         "    import gzip\n",
         "    import numpy as np\n",
